--- a/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
+++ b/apps/havana500-webclient/src/app/features/home/dummy/entertainment-preview/entertainment-preview.component.html
@@ -3,7 +3,12 @@
     <h1 translate class="section-name clickable">ENTERTAINMENT</h1>
   </div>
 
-  <mat-tab-group>
+  <div class="row article-summary-container">
+    <ant-article-summary [isTextVisible]="isMobile()" [isMetadataVisible]="false" [isCardShadowMode]="!isMobile()"
+      *ngFor="let article of (articles | async)" [article]="article" class="col-6 w-auto entertainment-article"></ant-article-summary>
+  </div>
+
+  <!-- <mat-tab-group>
     <mat-tab>
       <ng-template matTabLabel>
         <h4 translate>SPORTS</h4>
@@ -51,7 +56,7 @@
         </div>
       </ng-template>
     </mat-tab>
-  </mat-tab-group>
+  </mat-tab-group> -->
 
   <div class="more-elements-btn-container">
     <a translate class="btn" [routerLink]="'/section/entretenimiento'" fxFlexAlign="center">SEE_MORE</a>
