--- a/libs/shared/src/lib/components/article-summary/article-summary.component.scss
+++ b/libs/shared/src/lib/components/article-summary/article-summary.component.scss
@@ -127,6 +127,7 @@ $article-summary-bColor: #ffffff;
     font-size: 1.44em;
     line-height: 16px;
     font-weight: 700;
+    text-transform: uppercase;
   }
 }
 
