--- a/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.scss
+++ b/libs/shared/src/lib/components/outstanding-experiences/outstanding-experiences.component.scss
@@ -1,4 +1,4 @@
-@import '../../scss/ant.scss';
+@import '../../../../../../apps/havana500-webclient/src/app/core/scss/ant.scss';
 .arrow {
   position: absolute;
   top: 50%;
