Center vertically the age-modal

--- a/apps/havana500-webclient/src/app/features/layout/layout.component.scss
+++ b/apps/havana500-webclient/src/app/features/layout/layout.component.scss
@@ -28,3 +28,7 @@ body {
   color: black !important;
   background-color: white !important;
 }
+
+.custom-modal {
+  transform: translate(0, 100%) !important;
+}
