Add home navigation on mobile menu

--- a/apps/havana500-webclient/src/app/features/layout/mobile-menu/mobile-menu.component.html
+++ b/apps/havana500-webclient/src/app/features/layout/mobile-menu/mobile-menu.component.html
@@ -6,6 +6,8 @@
 >
   <mat-icon (click)="closeDialog()" class="close-icon">close_white</mat-icon>
 
+  <a class="section-name" mat-button [routerLink]="['home']">HOME</a>
+
   <a class="section-name" mat-button [routerLink]="['/section/eventos']"
     >EVENTOS</a
   >
