--- a/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
+++ b/apps/havana500-webclient/src/app/features/second-level/second-level-default/second-level-default.component.scss
@@ -1,5 +1,5 @@
 @import '~bootstrap/dist/css/bootstrap.css';
-@import '../../../../../../../libs/shared/src/lib/scss/ant.scss';
+@import '../../../core/scss/ant.scss';
 
 $tags-container-color: #2aaae2;
 
